# smart-handicap-sign

./: .dockerignore  .env.cert.example  .gitignore  .terraformignore  AGENTS.md  AZURE_SETUP.md  CODE_REVIEW_FINDINGS.md  DESIGN.md  HARDWARE.md  MVP.md  PILOT.md  README.md  REGISTRATION.md  TODO.md  WORKOS_SETUP.md  base.blend  base.blend1  base.stl  config.json  connect.py  detection.py  docker-compose.yml  main.py  mock_dps_x509_device.py  model_classify.py  model_train.py  model_weights_biases.cpp  model_weights_biases.json  model_weights_biases.txt  notify.py  package-lock.json  package.json  perceptron_bias.npy  perceptron_weights.npy  pitch_iphone.blend  pitch_iphone.blend1  renew-cert.ps1  requirements.txt  send_notification.py  session.html  (+5 more)
.github/: copilot-instructions.md
.specify/: feature.json
3d_Models/: base.3mf  base.blend  base.blend1  base.stl  base_core.stl  untitled.blend  untitled.blend1
CNN/: main.py  model.h5  model_weights_biases.json  modelog.tflite  requirements.txt  success.json  success.txt  test.py
NotificationAPI/: main.py  server.py
Other/: Bishop_ALotSmarter_Purchase Request.xlsx  base.blend  base.blend1  base.stl  pitch_deck.pptx  ~$Bishop_ALotSmarter_Purchase Request.xlsx
RaspberryPi/: AuthKey_8J3KC97C52.p8  boot.py  boot.sh  capture.py  classify.py  classify_og.py  lightsensor.py  main.py  main.qml  main_og.py  main_old.py  new_nn_testing  notify.py  notify_og.py  perceptron.py  perceptron_bias.npy  perceptron_weights.npy  requirements.txt  wave_functions.py
ai/: config.py  data.py  dockerfile  infer.py  lower_limit_test.py  model.py  requirements.txt  test_ai.py  train.py
azure-fa/: README.md  authorization.py  db.py  init.sql  requirements.txt
backend/: .env.example  containerapp-update.yaml  dockerfile  (+1 more)
firmware/main/: CMakeLists.txt  adc_sampler.c  adc_sampler.h  boot_support.c  boot_support.h  cloud_settings.c  cloud_settings.h  connection_policy.c  connection_policy.h  device_manager.c  device_manager.h  dps_certificates.h  dps_client.c  dps_client.h  https_client.c  https_client.h  identity_service.c  identity_service.h  idf_component.yml  iot_hub_client.c  iot_hub_client.h  led_driver.c  led_driver.h  main.c  nvs_storage.c  nvs_storage.h  ota_update.c  ota_update.h  provisioning_server.c  provisioning_server.h  runtime_config.h  wifi_manager.c  wifi_manager.h  wifi_recovery.c  wifi_recovery.h
(+602 files in other folders)
